# tolaria

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/mtg-ai/: Cargo.toml
crates/mtg-ai/src/: lib.rs
crates/mtg-cards/: Cargo.toml
crates/mtg-cards/benches/: compile.rs
crates/mtg-cards/src/: compiler.rs  gaps.rs  lib.rs  templates.rs  text.rs
crates/mtg-cards/tests/: staples.rs
crates/mtg-data/: Cargo.toml
crates/mtg-data/src/: cache.rs  lib.rs  model.rs  pool.rs  scryfall.rs
crates/mtg-engine/: Cargo.toml
crates/mtg-engine/src/: actions.rs  agent.rs  carddb.rs  combat.rs  events.rs  filters.rs  game.rs  layers.rs  lib.rs  mana_pay.rs  resolve.rs  sba.rs  state.rs  triggers.rs  turn.rs  view.rs  zones.rs
crates/mtg-engine/tests/: mechanics.rs  props.rs  vanilla.rs
crates/mtg-ir/: Cargo.toml
crates/mtg-ir/src/: ability.rs  compiled.rs  effect.rs  lib.rs  limits.rs  mana.rs  types.rs
crates/mtg-sim/: Cargo.toml
crates/mtg-sim/benches/: matchup.rs
crates/mtg-sim/src/: calibrate.rs  coverage.rs  goldfish.rs  lib.rs  limits.rs  meta_loader.rs  pilot.rs  replay.rs  sweep.rs  trust.rs
crates/mtg-sim/tests/: goldfish_golden.rs  matchup_golden.rs  pool_fuzz.rs
crates/mtg-sim/tests/common/: mod.rs
crates/mtg-sources/: Cargo.toml
crates/mtg-sources/src/: archetypes.rs  deck_import.rs  edhrec.rs  http.rs  lib.rs  meta.rs  tournaments.rs
crates/mtg-stats/: Cargo.toml
crates/mtg-stats/src/: lib.rs  trust.rs
crates/mtg-tui/: Cargo.toml
crates/mtg-tui/src/: lib.rs  meta_loader.rs
crates/mtgsim/: Cargo.toml
crates/mtgsim/src/: main.rs
crates/tolaria/: Cargo.toml
crates/tolaria-desktop/: Cargo.toml  tauri.conf.json
crates/tolaria-desktop/src/: main.rs
crates/tolaria-desktop/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/tolaria-desktop/ui/src/: App.tsx  api.ts  glossary.ts  styles.css  types.ts
crates/tolaria-desktop/ui/src/components/: bits.tsx  charts.tsx
crates/tolaria-desktop/ui/src/views/: Decks.tsx  Glossary.tsx  History.tsx  Meta.tsx  Results.tsx  Run.tsx
crates/tolaria/src/: main.rs
decks/: burn.txt  durdle.txt  krenko.txt  stompy.txt
docs/: limits.md
scripts/: sign.ps1
signing/: metadata.json
