[package]
name = "mtg-sim"
version.workspace = true
edition.workspace = true

[dependencies]
mtg-engine.workspace = true
mtg-ai.workspace = true
mtg-cards.workspace = true
mtg-data.workspace = true
mtg-ir.workspace = true
mtg-stats.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
