[package]
name = "mtg-tui"
version.workspace = true
edition.workspace = true

[dependencies]
mtg-sim.workspace = true
mtg-stats.workspace = true
mtg-data.workspace = true
mtg-sources.workspace = true
mtg-cards.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
