[package]
name = "tolaria"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tolaria"
path = "src/main.rs"

[dependencies]
mtg-sim.workspace = true
mtg-sources.workspace = true
mtg-cards.workspace = true
mtg-data.workspace = true
mtg-stats.workspace = true
mtg-engine.workspace = true
mtg-ai.workspace = true
mtg-ir.workspace = true
clap.workspace = true
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
